[gd_scene load_steps=3 format=3 uid="uid://dl0uxp5myw0oy"]

[ext_resource type="Script" path="res://Scenes/main_menu.gd" id="1_yi0dw"]

[sub_resource type="Theme" id="Theme_pbmxd"]
default_font_size = 40

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yi0dw")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 64
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="TitleLabel" type="Label" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 64
text = "PONG"
horizontal_alignment = 1

[node name="StartingOptions" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 25

[node name="PlayButton" type="Button" parent="MarginContainer/StartingOptions"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 40
text = "Play"

[node name="OptionsButton" type="Button" parent="MarginContainer/StartingOptions"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 40
text = "Options
"

[node name="PlayOptions" type="VBoxContainer" parent="MarginContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = SubResource("Theme_pbmxd")
theme_override_constants/separation = 25

[node name="OnePlayerButton" type="Button" parent="MarginContainer/PlayOptions"]
layout_mode = 2
text = "1 Player"

[node name="TwoPlayerButton" type="Button" parent="MarginContainer/PlayOptions"]
layout_mode = 2
text = "2 Players
"

[node name="BackButton" type="Button" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_font_sizes/font_size = 26
text = "Back
"

[connection signal="pressed" from="MarginContainer/StartingOptions/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="MarginContainer/StartingOptions/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="MarginContainer/PlayOptions/OnePlayerButton" to="." method="_on_one_player_button_pressed"]
[connection signal="pressed" from="MarginContainer/PlayOptions/TwoPlayerButton" to="." method="_on_two_player_button_pressed"]
[connection signal="pressed" from="MarginContainer/BackButton" to="." method="_on_back_button_pressed"]
